--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -8,7 +8,7 @@
         <! --The html code below is used to set the text on the web page tab -->
         <! --You can set this to whatever you want -->
         <! --For example: {Your name - Portfolio Type} -->
-        <title>Explore Data Science Academy - Serverless Student Portfolio Web page</title>
+        <title>LEHLOHONOLO</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/Untitled.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -46,7 +46,7 @@
                 <!-- ========= CUSTOMISE SECTION =========== -->
                 <!-- You can change 'Cloud Computing Predict' to 'Your Name' -->
                 <!-- The Masthead will then read: '{Your Name} - Project Portfolio' -->
-                <h1 class="masthead-heading text-uppercase mb-0">Cloud Computing Predict - Project Portfolio</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Lehlohonolo - Data Engineering Portfolio</h1>
                 <!-- ======================================= -->
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
@@ -57,7 +57,11 @@
                 <!-- Masthead Subheading-->
                 <!-- ========= CUSTOMISE SECTION =========== -->
                 <!-- Change this to a list of three or four of your most relevant skills-->
-                <p class="masthead-subheading font-weight-light mb-0">Machine Learning - Time Series - Dashboarding</p>
+                <ul>
+                    <p class="masthead-subheading font-weight-light mb-0">Machine Learning</p>
+                    <p class="masthead-subheading font-weight-light mb-0">Time Series</p>
+                    <p class="masthead-subheading font-weight-light mb-0">Consuming API's</p>
+                </ul>
                 <!-- ======================================= -->
             </div>
         </header>
@@ -82,7 +86,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/christopher-robin-ebbinghaus-pgSkeh0yl8o-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/uber-clone.jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
