modifying index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/uber-clone.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/credit (1).jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/thisisengineering-raeng-hoivM01c-vg-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/uber-clone.jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/gertruda-valaseviciute-xMObPS6V_gY-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/tictack.jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -168,8 +168,8 @@
                 <div class="row">
                     <!-- ========= CUSTOMISE SECTION =========== -->
                     <!-- You can replace the About Section content below to better fit the feel of your portfolio website -->
-                    <div class="col-lg-4 ml-auto"><p class="lead">EXPLORE is a next generation learning institution that teaches students the skills of the future. From Data Science to Data Engineering, from Machine Learning to Deep Learning we deliver cutting edge courses to satisfy your hunger to learn.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">Our philosophy is to teach our students how to solve problems in the real world. We emphasise teamwork, collaboration and working within constraints, under deadlines … while understanding context, audience and implementation challenges.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">I am a data engineer with experience in big data, data warehousing, and data mining. I am passionate about using my skills to help organizations make better decisions with their data. I am experienced in working with large-scale data.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">My philosphy is that data is the most powerful tool we have for understanding the world around us, and I am dedicated to using my skills to help organizations make the most of their data. I believe in using data to drive decision-making.</p></div>
                     <!-- ======================================= -->
                 </div>
                 <!-- About Section Button-->
