--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -8,7 +8,7 @@
         <! --The html code below is used to set the text on the web page tab -->
         <! --You can set this to whatever you want -->
         <! --For example: {Your name - Portfolio Type} -->
-        <title>Explore Data Science Academy - Serverless Student Portfolio Web page</title>
+        <title>LEHLOHONOLO</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/Untitled.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -46,7 +46,7 @@
                 <!-- ========= CUSTOMISE SECTION =========== -->
                 <!-- You can change 'Cloud Computing Predict' to 'Your Name' -->
                 <!-- The Masthead will then read: '{Your Name} - Project Portfolio' -->
-                <h1 class="masthead-heading text-uppercase mb-0">Thulasizwe Ntsele Predict - Cloud Computing Portfolio</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Lehlohonolo - Data Engineering Portfolio</h1>
                 <!-- ======================================= -->
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
@@ -57,7 +57,11 @@
                 <!-- Masthead Subheading-->
                 <!-- ========= CUSTOMISE SECTION =========== -->
                 <!-- Change this to a list of three or four of your most relevant skills-->
-                <p class="masthead-subheading font-weight-light mb-0">Machine Learning - Time Series - Dashboarding</p>
+                <ul>
+                    <p class="masthead-subheading font-weight-light mb-0">Machine Learning</p>
+                    <p class="masthead-subheading font-weight-light mb-0">Time Series</p>
+                    <p class="masthead-subheading font-weight-light mb-0">Consuming API's</p>
+                </ul>
                 <!-- ======================================= -->
             </div>
         </header>
@@ -82,7 +86,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/christopher-robin-ebbinghaus-pgSkeh0yl8o-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/credit (1).jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -94,7 +98,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/thisisengineering-raeng-hoivM01c-vg-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/uber-clone.jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -106,7 +110,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/gertruda-valaseviciute-xMObPS6V_gY-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/tictack.jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -164,8 +168,8 @@
                 <div class="row">
                     <!-- ========= CUSTOMISE SECTION =========== -->
                     <!-- You can replace the About Section content below to better fit the feel of your portfolio website -->
-                    <div class="col-lg-4 ml-auto"><p class="lead">EXPLORE is a next generation learning institution that teaches students the skills of the future. From Data Science to Data Engineering, from Machine Learning to Deep Learning we deliver cutting edge courses to satisfy your hunger to learn.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">Our philosophy is to teach our students how to solve problems in the real world. We emphasise teamwork, collaboration and working within constraints, under deadlines … while understanding context, audience and implementation challenges.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">I am a data engineer with experience in big data, data warehousing, and data mining. I am passionate about using my skills to help organizations make better decisions with their data. I am experienced in working with large-scale data.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">My philosphy is that data is the most powerful tool we have for understanding the world around us, and I am dedicated to using my skills to help organizations make the most of their data. I believe in using data to drive decision-making.</p></div>
                     <!-- ======================================= -->
                 </div>
                 <!-- About Section Button-->
@@ -240,9 +244,9 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            3A Violet Close St
+                            12th Floor, Rennie House, 19 Ameshoff St
                             <br />
-                            Cape Town, 7441
+                            Johannesburg, 2001
                         </p>
                     </div>
                     <!-- ======================================= -->
@@ -261,7 +265,7 @@
                     <!-- ========= CUSTOMISE SECTION =========== -->
                     <!-- You may wish to modify this text to align with your personal portfolio website -->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">Thulasizwe Ntsele AI Cloud Computing Project</h4>
+                        <h4 class="text-uppercase mb-4">Explore AI Cloud Computing Predict</h4>
                         <p class="lead mb-0">
                             Create your own data science portfolio with an intelligent NPL bot handling enquiries for you.</a>
                         </p>
@@ -272,7 +276,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © Your Website 2021</small></div>
+            <div class="container"><small>Copyright © Lehlohonolo lehoko 2022</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
